import { AutoResizingTextarea } from 'oxide-components/components/autoresizingtextarea/AutoResizingTextarea';
import type { Height } from 'oxide-components/components/autoresizingtextarea/AutoResizingTextareaTypes';
import { Bem } from 'oxide-components/Main';
import { useState } from 'react';
import { describe, expect, it } from 'vitest';
import { userEvent } from 'vitest/browser';
import { render } from 'vitest-browser-react';

import * as SnapshotTestUtils from './utils/SnapshotTestUtils';

describe('browser.components.AutoResizingTextareaTest', () => {
  it('Sanity check', async () => {
    const placeHolder = 'Placeholder for disabled textarea';
    const { getByTestId } = render(
      <AutoResizingTextarea value='' placeholder={placeHolder} disabled={true} data-testid="textarea" />,
      {

        wrapper: ({ children }) => {
          return (
            <div className={Bem.block('tox')}>
              <div style={{
                display: 'flex',
                alignItems: 'center',
                justifyContent: 'center',
                padding: '10px'
              }}>
                <div style={{
                  width: '120px'
                }}>
                  {children}
                </div>
              </div>
            </div>
          );
        },
      });

    const textareaLocator = getByTestId('textarea');
    await expect.element(textareaLocator, {
      message: 'Textarea should have a placeholder'
    }).toHaveAttribute('placeholder', placeHolder);
    await expect.element(textareaLocator, {
      message: 'Textarea should be disabled'
    }).toBeDisabled();

  });

  it('Should grow and shrink as needed', async () => {

    const maxHeight: Height = {
      unit: 'rows',
      value: 4
    };
    const minHeight: Height = {
      unit: 'rows',
      value: 1
    };

    const lineOfText = 'Hello World! ';

    const TestComponent = () => {
      const [ value, setValue ] = useState('');
      return (
        <AutoResizingTextarea value={value} onChange={setValue} maxHeight={maxHeight} minHeight={minHeight} data-testid="textarea" />
      );
    };
    const { getByTestId } = render(
      <TestComponent />,
      {

        wrapper: ({ children }) => {
          return (
            <div className={Bem.block('tox')}>
              <div style={{
                display: 'flex',
                alignItems: 'center',
                justifyContent: 'center',
                padding: '10px'
              }}>
                <div style={{
                  width: '120px'
                }}>
                  {children}
                </div>
              </div>
            </div>
          );
        },
      });
    const textareaLocator = getByTestId('textarea');
    await expect.element(textareaLocator, {
      message: 'Textarea rows should be initially the minHeight'
    }).toHaveAttribute('rows', `${minHeight.value}`);

    await userEvent.type(textareaLocator, lineOfText + lineOfText);
    await expect.element(textareaLocator, {
      message: 'Textarea rows should be 2 after typing'
    }).toHaveAttribute('rows', '2');

    await userEvent.type(textareaLocator, lineOfText + lineOfText);
    await expect.element(textareaLocator, {
      message: 'Textarea rows should be 4 after typing more'
    }).toHaveAttribute('rows', '4');

    await userEvent.type(textareaLocator, lineOfText + lineOfText);
    await expect.element(textareaLocator, {
      message: 'Textarea rows should not grow more than 4 after typing more'
    }).toHaveAttribute('rows', '4');

    await userEvent.clear(textareaLocator);
    await expect.element(textareaLocator, {
      message: 'Textarea rows should shrink to minHeight after clearing'
    }).toHaveAttribute('rows', `${minHeight.value}`);
  });

  it('Should handle maxHeight and minHeight in pixels correctly', async () => {

    const maxHeight: Height = {
      unit: 'px',
      value: 172
    };
    const minHeight: Height = {
      unit: 'px',
      value: 50
    };

    const lineOfText = 'Hello World! ';

    const TestComponent = () => {
      const [ value, setValue ] = useState('');
      return (
        <AutoResizingTextarea value={value} onChange={setValue} maxHeight={maxHeight} minHeight={minHeight} data-testid="textarea" />
      );
    };

    const { getByTestId } = render(
      <TestComponent />,
      {
        wrapper: ({ children }) => {
          return (
            <div className={Bem.block('tox')}>
              <div style={{
                display: 'flex',
                flexDirection: 'column',
                alignItems: 'center',
                justifyContent: 'center',
                height: '200px',
                width: '200px',
                border: '1px solid black',
                padding: '10px',
                boxSizing: 'border-box'
              }}>
                <div style={{
                  width: '120px'
                }}>
                  {children}
                </div>
              </div>
            </div>
          );
        },
      });

    const textareaLocator = getByTestId('textarea');
    await expect.element(textareaLocator, {
      message: 'Textarea rows should be initially resolved to 2'
    }).toHaveAttribute('rows', '2');

    await userEvent.type(textareaLocator, lineOfText + lineOfText);
    await expect.element(textareaLocator, {
      message: 'Textarea rows should stay at 2 after typing'
    }).toHaveAttribute('rows', '2');

    await userEvent.type(textareaLocator, lineOfText + lineOfText);
    await expect.element(textareaLocator, {
      message: 'Textarea rows should be 4 after typing more'
    }).toHaveAttribute('rows', '4');

    await userEvent.type(textareaLocator, lineOfText + lineOfText);
    await expect.element(textareaLocator, {
      message: 'Textarea rows should not grow more than 5 after typing more'
    }).toHaveAttribute('rows', `${5}`);

    await userEvent.clear(textareaLocator);
    await expect.element(textareaLocator, {
      message: 'Textarea rows should shrink to minHeight after clearing'
    }).toHaveAttribute('rows', `${2}`);
  });

  it('Should resolve rows to 1 initially if minHeight in px is smaller than lineHeight', async () => {

    const maxHeight: Height = {
      unit: 'px',
      value: 120
    };
    const minHeight: Height = {
      unit: 'px',
      value: 20
    };

    const TestComponent = () => {
      const [ value, setValue ] = useState('');
      return (
        <AutoResizingTextarea value={value} onChange={setValue} maxHeight={maxHeight} minHeight={minHeight} data-testid="textarea" />
      );
    };

    const { getByTestId } = render(
      <TestComponent />,
      {
        wrapper: ({ children }) => {
          return (
            <div className={Bem.block('tox')}>
              <div style={{
                display: 'flex',
                flexDirection: 'column',
                alignItems: 'center',
                justifyContent: 'center',
                height: '200px',
                width: '200px',
                border: '1px solid black',
                padding: '10px',
                boxSizing: 'border-box'
              }}>
                <div style={{
                  width: '120px'
                }}>
                  {children}
                </div>
              </div>
            </div>
          );
        },
      });

    const textareaLocator = getByTestId('textarea');
    await expect.element(textareaLocator, {
      message: 'Textarea rows should be initially resolved to 1'
    }).toHaveAttribute('rows', `${1}`);
  });

  it('TINY-14318: Should size to 1 row when typed in a textarea that was initially mounted hidden', async () => {

    const lineOfText = 'Hello';

    const TestComponent = () => {
      const [ hidden, setHidden ] = useState(true);
      const [ value, setValue ] = useState('');
      return (
        <>
          <button data-testid="toggle" onClick={() => setHidden(false)}>show</button>
          <div style={{ display: hidden ? 'none' : 'block' }}>
            <AutoResizingTextarea value={value} onChange={setValue} data-testid="textarea" />
          </div>
        </>
      );
    };

    const { getByTestId } = render(
      <TestComponent />,
      {
        wrapper: ({ children }) => {
          return (
            <div className={Bem.block('tox')}>
              <div style={{
                display: 'flex',
                alignItems: 'center',
                justifyContent: 'center',
                padding: '10px'
              }}>
                <div style={{
                  width: '120px'
                }}>
                  {children}
                </div>
              </div>
            </div>
          );
        },
      });

    await userEvent.click(getByTestId('toggle'));

    const textareaLocator = getByTestId('textarea');
    await expect.element(textareaLocator, {
      message: 'Textarea rows should be 1 once revealed'
    }).toHaveAttribute('rows', '1');

    await userEvent.type(textareaLocator, lineOfText);
    await expect.element(textareaLocator, {
      message: 'Textarea rows should stay at 1 after typing one short line'
    }).toHaveAttribute('rows', '1');
  });

  describe('Snapshot Tests', () => {
    const rows = (value: number): Height => ({ unit: 'rows', value });

    it('TINYMCE-14505: Should match snapshot for an empty textarea with a placeholder', () => {
      const { asFragment } = render(
        <AutoResizingTextarea value="" placeholder="Ask anything" />,
        { wrapper: SnapshotTestUtils.snapshotWrapper }
      );
      expect(SnapshotTestUtils.normalize(asFragment())).toMatchSnapshot('Empty with placeholder');
    });

    it('TINYMCE-14505: Should match snapshot for a disabled textarea', () => {
      const { asFragment } = render(
        <AutoResizingTextarea value="Disabled" disabled />,
        { wrapper: SnapshotTestUtils.snapshotWrapper }
      );
      expect(SnapshotTestUtils.normalize(asFragment())).toMatchSnapshot('Disabled');
    });

    it('TINYMCE-14505: Should match snapshot for a textarea grown to fit its content', () => {
      const { asFragment } = render(
        <AutoResizingTextarea value={'one\ntwo\nthree'} minHeight={rows(1)} maxHeight={rows(4)} />,
        { wrapper: SnapshotTestUtils.snapshotWrapper }
      );
      expect(SnapshotTestUtils.normalize(asFragment())).toMatchSnapshot('Grown to three rows');
    });

    it('TINYMCE-14505: Should match snapshot for a textarea clamped at its maximum rows', () => {
      const { asFragment } = render(
        <AutoResizingTextarea value={'one\ntwo\nthree\nfour\nfive\nsix'} minHeight={rows(1)} maxHeight={rows(3)} />,
        { wrapper: SnapshotTestUtils.snapshotWrapper }
      );
      expect(SnapshotTestUtils.normalize(asFragment())).toMatchSnapshot('Clamped at maximum rows');
    });
  });
});
